# NES_Emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
images/: Thumbs.db
src/: Debugger.cpp  Debugger.h  Emulator.cpp  Emulator.h  GLDisplay.cpp  GLDisplay.h  NESCPU.cpp  NESCPU.h  NESCartrige.cpp  NESCartrige.h  NESController.cpp  NESController.h  NESDevice.cpp  NESDevice.h  NESPPU.cpp  NESPPU.h  NESPPUHelpers.h  NESState.h
src/mappers/: NESMapper.h  NESMapper_000.h  NESMapper_001.h  NESMapper_002.h  NESMapper_007.h
utils/: gen_palette.py
